Copy changes and fix to stretched product team

--- a/source/assets/stylesheets/styles/_project_team.scss
+++ b/source/assets/stylesheets/styles/_project_team.scss
@@ -39,7 +39,7 @@
   width: 33%;
 
   .project-team__headshot {
-    width: 66%;
+    width: 52%;
   }
 }
 
